# esp-skainet

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  README_cn.md  conftest.py
components/: component_conf.mk
components/esp-tts/: CMakeLists.txt  README.md  README_en.md  component.mk
components/esp-tts/esp_chinese_tts/include/: esp_tts.h  esp_tts_voice.h
components/esp-tts/esp_tts_wav/: wav_decoder.c  wav_decoder.h  wav_encoder.c
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.new  component.mk  esp_board_init.c  idf_component.yml  idf_component.yml.bak
components/hardware_driver/MediaHal/: Kconfig.projbuild  MediaHal.c  MediaHal.h
components/hardware_driver/MediaHal/Board/: board.h  esp32_corvo_v1_1_board.h  esp32_korvo_v1_1_board.h  esp32_s2_kaluga_1_V1_2_board.h  esp32_s3_box_board.h  esp32_s3_cube_v2_0_board.h  esp32_s3_korvo2_v3_board.h  esp32_s3_korvo_v2_0_board.h  esp32_s3_korvo_v3_0_board.h  esp32_s3_korvo_v4_0_board.h  lyrat_mini_v1_0_board.h  lyrat_mini_v1_1_board.h  lyrat_v4_2_board.h  lyratd_ft_doss_v1_0_board.h  lyratd_ft_v1_0_board.h  lyratd_msc_bv1_0_board.h  lyratd_msc_v2_1_board.h  lyratd_msc_v2_2_board.h
components/hardware_driver/MediaHal/Codec/: ES7149_interface.c  ES7149_interface.h  ES8374_interface.c  ES8374_interface.h  ES8388_interface.c  ES8388_interface.h  ESCodec_common.h  es7210.c  es7210.h  es8311.c  es8311.h  msc_dac.c  msc_dac.h
components/hardware_driver/MediaHal/Codec/wm8960/: wm8960.c
components/hardware_driver/MediaHal/DSP/cnx20921/: cx20921Interface.c
components/hardware_driver/MediaHal/DSP/im501/: DspI2c.c  DspI2c.h  component.mk  esp_ft_dsp.c  esp_ft_dsp.h  im501_SPI_driver.c  im501_SPI_driver.h  im501_driver.c  im501_driver.h  im501_i2c_driver.c  im501_i2c_driver.h  im501_spi.h
components/hardware_driver/MediaHal/DSP/test/: record_for_test.c
components/hardware_driver/MediaHal/DSP/zl38063/: component.mk  tw_hal_verify.c  tw_ldcfg.c  tw_ldfw.c  tw_ldfwcfg.c  tw_spi_access.c  tw_spi_access.h  vprocTwolf_access.c  vprocTwolf_access.h  vproc_common.c  vproc_common.h  vproc_data_types.h  zl38063_config.c  zl38063_config.h  zl38063_firmware.c  zl38063_firmware.h
components/hardware_driver/SDCardConfig/: sdcard_init.c  sdcard_init.h
components/hardware_driver/SystemSal/: InterruptionSal.c  InterruptionSal.h  add_license.sh  lock.c
components/hardware_driver/boards/esp32-korvo/: bsp_board.c
components/hardware_driver/boards/esp32p4-function-ev/: bsp_board.c
components/hardware_driver/boards/esp32p4-function-ev-2mic/: bsp_board.c
components/hardware_driver/boards/esp32s3-box/: bsp_board.c
components/hardware_driver/boards/esp32s3-box-3/: bsp_board.c
components/hardware_driver/boards/esp32s3-eye/: bsp_board.c
components/hardware_driver/boards/esp32s3-korvo-1/: bsp_board.c
components/hardware_driver/boards/esp32s3-korvo-2/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h  esp32_korvo_v1_1_board.h  esp32_p4_function_ev_2mic_board.h  esp32_p4_function_ev_board.h  esp32_s3_box_3_board.h  esp32_s3_box_board.h  esp32_s3_eye_board.h  esp32_s3_korvo_1_v4_board.h  esp32_s3_korvo_2_v3_board.h
components/hardware_driver/button/: button.c
components/hardware_driver/button/include/: button.h
components/hardware_driver/codec/es7210/: es7210.c
components/hardware_driver/codec/es8311/: es8311.c  es8311.h
components/hardware_driver/codec/es8388/: es8388.c
components/hardware_driver/include/: esp_board_init.h
components/hardware_driver/led/: ws2812.c
components/hardware_driver/led/include/: ws2812.h
components/hardware_driver/src/: analog_agc.c  analog_agc.h  digital_agc.c  digital_agc.h  esp_agc.c  esp_agc.h  gain_control.h  signal_processing_library.h
components/led_strip/: CMakeLists.txt
components/perf_tester/: CMakeLists.txt  README.md  idf_component.yml  mn_perf_tester.c  mn_perf_tester.h  perf_tester.c  perf_tester.h  perf_tester_cmd.c  perf_tester_cmd.h  wn_perf_tester.c  wn_perf_tester.h
components/player/: CMakeLists.txt  esp_skainet_player.c  esp_skainet_player.h
components/sr_ringbuf/: CMakeLists.txt  EspAudioAlloc.c  ringbuf.c
components/tinyusb/: CMakeLists.txt  Kconfig  tusb_config.h  usb_descriptors.c  usb_descriptors.h
examples/: .build-test-rules.yml  README.md  README_cn.md
examples/chinese_tts/: CMakeLists.txt  Makefile  README.md  flash_voicedata.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3box  sdkconfig_esp32s3.defaults
examples/chinese_tts/main/: CMakeLists.txt  idf_component.yml  main.c  tts_urat.c
examples/chinese_tts/main/include/: tts_urat.h
examples/cn_speech_commands_recognition/: CMakeLists.txt  README.md  partitions.csv  partitions_esp32.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3box  sdkconfig.defaults.esp32s3eye  sdkconfig_box  sdkconfig_esp32.defaults  sdkconfig_esp32s3r8_8+4.defaults  sdkconfig_eye
examples/deep_noise_suppression/: CMakeLists.txt  README.md  README_cn.md  sdkconfig.defaults.esp32s3
examples/direction_of_arrival/: CMakeLists.txt  README.md  README_cn.md  partitions_esp32.csv
examples/en_speech_commands_recognition/: README.md  partitions.csv  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3box  sdkconfig.defaults.esp32s3eye  sdkconfig_box  sdkconfig_esp32s3r8_8+4.defaults
examples/esp32s3_ble_corpus_collector/: run.sh
examples/garbage_classification/: CMakeLists.txt  Makefile  README.md  README_cn.md  sdkconfig.defaults
examples/get_started/: Makefile  README.md  README_cn.md  partitions.csv  sdkconfig.defaults  sdkconfig_esp32.defaults  sdkconfig_esp32s3.defaults
examples/hardware_test/: CMakeLists.txt  sdkconfig_esp32s3r8_8+4.defaults
examples/mic_array_speech_enhancement/: CMakeLists.txt  Makefile  README.md  README_cn.md  sdkconfig.defaults
img/: Skainet_diagram
test/: .build-rules.yml  README.md
test/vad/: CMakeLists.txt  (+2 more)
(+288 files in other folders)
